# cocoapi

./: .gitignore  main.py  pyproject.toml
PythonAPI/pycocotools/: cocoeval.py
