[tool.poetry]
name = "cocoapi"
version = "0.1.0"
description = ""
authors = ["noymer <bxhshjp2000@yahoo.co.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
pycocotools = {path = "PythonAPI"}

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
